--- a/src/Main.scss
+++ b/src/Main.scss
@@ -26,6 +26,10 @@ body {
         background-color: #111;
         padding: 0;
 
+        .active {
+            background-color: #0099ff;
+        }
+
         li {
             display: inline;
             list-style-type: none;
